[package]
name = "blob_store"
version = "0.1.0"
edition = "2021"

[features]
bench_rocksdb = ["dep:rocksdb"]

[dependencies]
memmap2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
lz4_flex = { version = "0.11.3", default-features = false }
rand = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
atomicwrites = { workspace = true }
nix = { workspace = true }
bincode = "1.3.3"
io = { path = "../common/io" }
memory = { path = "../common/memory" }

# this is not on dev-dependencies because dev-dependencies cannot be optional :(
rocksdb = { version = "0.22.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
csv = "1.3.0"
rstest = "0.23.0"
proptest = "1.5.0"
bustle = "0.5.1"

[[bench]]
name = "random_data_bench"
harness = false

[[bench]]
name = "real_data_bench"
harness = false

[[bench]]
name = "bitmask_bench"
harness = false

[[bench]]
name = "bustle_bench"
harness = false

[profile.bench]
debug = true
