[package]
name = "collection"
version = "0.4.2"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"

[lints]
workspace = true

[features]
testing = []
tracing = ["dep:tracing", "api/tracing", "segment/tracing"]
data-consistency-check = []

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
approx = "0.5.1"
collection = { path = ".", features = ["testing"] }
common = { path = "../common/common", features = ["testing"] }
segment = { path = "../segment", features = ["testing"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[dependencies]
parking_lot = { workspace = true }
ahash = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "~1.3"
wal = { workspace = true }
ordered-float = { workspace = true }
hashring = "0.3.6"
tinyvec = { version = "1.9.0", features = ["alloc", "latest_stable_rust"] }
bitvec = { workspace = true }
lazy_static = "1.5.0"
smallvec = "1.15.0"

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
atomicwrites = { workspace = true}
log = { workspace = true }
env_logger = "0.11"
merge = { workspace = true }
async-trait = "0.1.88"
arc-swap = "1.7.1"
tonic = { workspace = true }
uuid = { workspace = true }
url = { version = "2", features = ["serde"] }
validator = { workspace = true }
http = { workspace = true }
actix-web-validator = "6.0.0"
actix-web = { version = "4.10.2" }
actix-files = "0.6.6"

common = { path = "../common/common" }
cancel = { path = "../common/cancel" }
io = { path = "../common/io" }
issues = { path = "../common/issues" }
segment = { path = "../segment" }
sparse = { path = "../sparse" }
api = { path = "../api" }

itertools = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
tar = { workspace = true }
fs_extra = "1.3.0"
semver = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true }
ringbuffer = "0.15.0"
strum = { workspace = true }

tracing = { workspace = true, optional = true }
fs4 = "0.13.1"

# AWS S3 support
object_store = { version = "0.12.0", features = ["aws"] }


[[bench]]
name = "hash_ring_bench"
harness = false

[[bench]]
name = "batch_search_bench"
harness = false

[[bench]]
name = "batch_query_bench"
harness = false
