[package]
name = "common-workspace-stub"
version = "0.0.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"
publish = false

# This is an empty stub-crate to allow adding sub-crates to the `common` directory
# and using wildcards in the workspace root.
#
# "Real" `common` crate is located at `lib/common/common`!
#
# E.g.:
# ```
# [workspace]
# members = ["lib/*", "lib/common/*"]
# ```
#
# Without this stub-crate, `lib/*` wildcard would fail, because it requires
# `lib/common/Cargo.toml` to exist.
#
# In a similar vein `lib/common/*` wildcard would fail, if there's `lib/common/src`
# directory without `Cargo.toml` file, so we have to explicitly put `lib.rs`
# into the root of the stub-crate.

[lib]
path = "lib.rs"
