[package]
name = "gpu"
version = "0.0.1"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Ivan Pleshkov <pleshkov.ivan@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

# Disable tests for the library.
# Functionality is tested in segment crate.
# Without this line, cargo will try to run tests for the library
# even if gpu feature is disabled.
[lib]
test = false

[dependencies]
log = "0.4"
rand = "0.8.5"
ash = { version = "0.37.0", default-features = false, features = ["loaded", "debug"] }
gpu-allocator = "0.21.0"
shaderc = { version = "0.8.3", features = ["build-from-source"]}
parking_lot = { version = "0.12.3" }
memory = { path = "../common/memory" }
