[package]
name = "gpu"
version = "0.1.0"
authors = [
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"

[lints]
workspace = true

[features]
gpu = [
    "dep:ash",
    "dep:gpu-allocator",
    "dep:shaderc",
]
testing = []

[dependencies]
ash = { version = "0.38.0", optional = true, default-features = false, features = ["loaded", "debug"] }
gpu-allocator = { version = "0.27.0", optional = true }
shaderc = { version = "0.8.3", optional = true, features = ["build-from-source"]}
zerocopy = { workspace = true }

log = { workspace = true }
parking_lot = { workspace = true }
