[package]
name = "gridstore"
version = "0.1.0"
authors = ["Qdrant Team <info@qdrant.tech>"]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
bench_rocksdb = ["dep:rocksdb"]

[dependencies]
ahash = { workspace = true }
memmap2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
lz4_flex = { version = "0.11.3", default-features = false }
rand = { workspace = true }
bitvec = { workspace = true }
itertools = { workspace = true }
io = { path = "../common/io" }
memory = { path = "../common/memory" }
dataset = { path = "../common/dataset" }
common = { path = "../common/common" }

# this is not on dev-dependencies because dev-dependencies cannot be optional :(
rocksdb = { version = "0.23.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
csv = "1.3.1"
rstest = { workspace = true }
proptest = { workspace = true }
bustle = "0.5.1"
common = { path = "../common/common", features = ["testing"] }

[[bench]]
name = "random_data_bench"
harness = false

[[bench]]
name = "real_data_bench"
harness = false

[[bench]]
name = "bitmask_bench"
harness = false

[[bench]]
name = "bustle_bench"
harness = false
