[package]
name = "segment"
version = "0.6.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[features]
multiling-chinese = [
    "charabia/chinese-segmentation",
    "charabia/chinese-normalization",
    "charabia/chinese-normalization-pinyin",
]
multiling-japanese = ["charabia/japanese"]
multiling-korean = ["charabia/korean"]
testing = ["common/testing", "sparse/testing"]
gpu = ["gpu/gpu"]

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion = { workspace = true }
dataset = { path = "../common/dataset" }
env_logger = "0.11"
indicatif = { workspace = true }
rmp-serde = "~1.3"
rand_distr = "0.4.3"
walkdir = "2.5.0"
rstest = "0.23.0"
segment = { path = ".", features = ["testing"] }
proptest = "1.5.0"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[dependencies]
bitpacking = "0.9.2"
data-encoding = { workspace = true }
delegate = { workspace = true }
tempfile = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "snappy",
    "lz4",
] }
uuid = { workspace = true }
bincode = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
serde-value = "0.7"
serde_variant = { workspace = true }
serde-untagged = "0.1.6"
ordered-float = { workspace = true }
thiserror = { workspace = true }
atomic_refcell = { workspace = true }
atomicwrites = { workspace = true }
memmap2 = { workspace = true }
schemars = { workspace = true }
log = { workspace = true }
geo = "0.29.2"
geohash = "0.13.1"
num-traits = { workspace = true }
num-derive = "0.4.2"
num-cmp = "0.1.0"
rand = { workspace = true }
bitvec = { workspace = true }
seahash = "4.1.0"
semver = { workspace = true }
tar = { workspace = true }
fs_extra = "1.3.0"
tinyvec = { version = "1.8.0", features = ["alloc"] }
validator = { workspace = true }
chrono = { workspace = true }
smol_str = { version = "0.3.2", features = ["serde"] }
fnv = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
http = "1.0.0"
sha2 = { workspace = true }
smallvec = "1.13.2"
is_sorted = "0.1.1"
strum = { workspace = true }
byteorder = { workspace = true }
zerocopy = { workspace = true }
lazy_static = "1.5.0"

sysinfo = "0.32"
charabia = { version = "0.9.2", default-features = false, features = [
    "greek",
    "hebrew",
    "thai",
] }

blob_store = { path = "../blob_store" }

common = { path = "../common/common" }
io = { path = "../common/io" }
issues = { path = "../common/issues" }
memory = { path = "../common/memory" }
quantization = { path = "../quantization" }
sparse = { path = "../sparse" }
gpu = { path = "../gpu" }

tracing = { workspace = true, optional = true }
macro_rules_attribute = "0.2.0"
nom = "7.1.3"
half = { workspace = true }
merge = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"
procfs = { version = "0.17", default-features = false }
io-uring = "0.7.2"

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "hnsw_build_graph"
harness = false

[[bench]]
name = "hnsw_search_graph"
harness = false

[[bench]]
name = "conditional_search"
harness = false

[[bench]]
name = "dynamic_mmap_flags"
harness = false

[[bench]]
name = "hnsw_build_asymptotic"
harness = false

[[bench]]
name = "serde_formats"
harness = false

[[bench]]
name = "id_type_benchmark"
harness = false

[[bench]]
name = "map_benchmark"
harness = false

[[bench]]
name = "boolean_filtering"
harness = false

[[bench]]
name = "sparse_index_search"
harness = false

[[bench]]
name = "sparse_index_build"
harness = false

[[bench]]
name = "multi_vector_search"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "range_filtering"
harness = false

[[bench]]
name = "in_memory_id_tracker"
harness = false

[[bench]]
name = "scorer_mmap"
harness = false

[[bench]]
name = "segment_info"
harness = false
