[package]
name = "segment"
version = "0.6.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"

[lints]
workspace = true

[features]
multiling-chinese = [
    "charabia/chinese-segmentation",
    "charabia/chinese-normalization",
    "charabia/chinese-normalization-pinyin",
]
multiling-japanese = ["charabia/japanese"]
multiling-korean = ["charabia/korean"]
testing = ["common/testing", "sparse/testing", "gpu/testing"]
gpu = ["gpu/gpu"]

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion = { workspace = true }
dataset = { path = "../common/dataset" }
env_logger = "0.11"
humantime = { workspace = true }
indicatif = { workspace = true }
rmp-serde = "~1.3"
rand_distr = "0.5.1"
walkdir = "2.5.0"
rstest = { workspace = true }
segment = { path = ".", features = ["testing"] }
proptest = { workspace = true }
anyhow = "1.0.98"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[dependencies]
bitpacking = "0.9.2"
bytemuck = { workspace = true }
data-encoding = { workspace = true }
delegate = { workspace = true }
tempfile = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
rocksdb = { version = "0.23.0", default-features = false, features = [
    "bindgen-runtime",
    "snappy",
    "lz4",
] }
uuid = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
serde-value = "0.7"
serde_variant = { workspace = true }
serde-untagged = "0.1.7"
ordered-float = { workspace = true }
thiserror = { workspace = true }
atomic_refcell = { workspace = true }
atomicwrites = { workspace = true }
memmap2 = { workspace = true }
schemars = { workspace = true }
log = { workspace = true }
geo = "0.30.0"
geohash = "0.13.1"
num-traits = { workspace = true }
num-derive = "0.4.2"
num-cmp = "0.1.0"
rand = { workspace = true }
bitvec = { workspace = true }
seahash = "4.1.0"
semver = { workspace = true }
tar = { workspace = true }
fs_extra = "1.3.0"
tinyvec = { version = "1.9.0", features = ["alloc", "latest_stable_rust"] }
validator = { workspace = true }
chrono = { workspace = true }
smol_str = { version = "0.3.2", default-features = false, features = ["serde"] }
fnv = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
self_cell = "1.2.0"
sha2 = { workspace = true }
smallvec = "1.15.0"
is_sorted = "0.1.1"
strum = { workspace = true }
byteorder = { workspace = true }
tap = { workspace = true }
zerocopy = { workspace = true }
lazy_static = "1.5.0"

sysinfo = "0.33"
charabia = { version = "0.9.3", default-features = false, features = [
    "greek",
    "hebrew",
    "thai",
] }

gridstore = { path = "../gridstore" }

common = { path = "../common/common" }
io = { path = "../common/io" }
macros = { path = "../macros" }
memory = { path = "../common/memory" }
quantization = { path = "../quantization" }
sparse = { path = "../sparse" }
gpu = { path = "../gpu" }

tracing = { workspace = true, optional = true }
macro_rules_attribute = "0.2.0"
nom = "8.0.0"
half = { workspace = true }
merge = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"
procfs = { version = "0.17", default-features = false }
io-uring = "0.7.4"

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "hnsw_build_graph"
harness = false

[[bench]]
name = "hnsw_search_graph"
harness = false

[[bench]]
name = "conditional_search"
harness = false

[[bench]]
name = "dynamic_mmap_flags"
harness = false

[[bench]]
name = "hnsw_build_asymptotic"
harness = false

[[bench]]
name = "serde_formats"
harness = false

[[bench]]
name = "id_type_benchmark"
harness = false

[[bench]]
name = "map_benchmark"
harness = false

[[bench]]
name = "boolean_filtering"
harness = false

[[bench]]
name = "numeric_index_check_values"
harness = false

[[bench]]
name = "sparse_index_search"
harness = false

[[bench]]
name = "sparse_index_build"
harness = false

[[bench]]
name = "sparse_vector_storage"
harness = false

[[bench]]
name = "multi_vector_search"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "range_filtering"
harness = false

[[bench]]
name = "in_memory_id_tracker"
harness = false

[[bench]]
name = "mmap_bitslice_buffered_update_wrapper"
harness = false

[[bench]]
name = "scorer_mmap"
harness = false

[[bench]]
name = "segment_info"
harness = false
