[package]
name = "shard"
version = "0.1.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"


[features]
testing = []

[dependencies]
api = { path = "../api" }
common = { path = "../common/common" }
io = { path = "../common/io" }
segment = { path = "../segment", default-features = false }
sparse = { path = "../sparse" }

ahash = { workspace = true }
bitvec = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rmp-serde = "~1.3"
schemars = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
validator = { workspace = true }
wal = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
segment = { path = "../segment", default-features = false, features = ["testing"] }

fs-err = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
serde_cbor = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
