[package]
name = "sparse"
version = "0.1.0"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[dependencies]
common = { path = "../common/common" }
io = { path = "../common/io" }
memory = { path = "../common/memory" }
memmap2 = "0.9.4"
schemars = { workspace = true }
serde = { workspace = true }
tempfile = "3.10.1"
ordered-float = "4.2"
rand = "0.8.5"
validator.workspace = true
itertools = "0.12.1"
parking_lot = "0.12.1"
