[package]
name = "sparse"
version = "0.1.0"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[features]
testing = []

[dependencies]
bitpacking = "0.9.2"
common = { path = "../common/common" }
io = { path = "../common/io" }
memory = { path = "../common/memory" }
memmap2 = "0.9.4"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.10.1"
ordered-float = "4.2"
rand = "0.8.5"
validator = { workspace = true }
itertools = { workspace = true }
log = "0.4"
parking_lot = "0.12.2"

[dev-dependencies]
criterion = "0.5"
dataset = { path = "../common/dataset" }
indicatif = { workspace = true }
sparse = { path = ".", features = ["testing"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[[bench]]
name = "search"
harness = false
