[package]
name = "sparse"
version = "0.1.0"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[features]
testing = []

[dependencies]
bitpacking = "0.9.2"
blob_store = { path = "../blob_store" }
bincode = "1.3"
common = { path = "../common/common" }
half = { workspace = true }
io = { path = "../common/io" }
memory = { path = "../common/memory" }
memmap2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dataset = { path = "../common/dataset" }
generic-tests = { workspace = true }
indicatif = { workspace = true }
sparse = { path = ".", features = ["testing"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[[bench]]
name = "search"
harness = false
