[package]
name = "storage"
version = "0.2.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[features]
tracing = ["dep:tracing", "api/tracing", "collection/tracing", "segment/tracing"]

[dev-dependencies]
proptest = "1.5.0"
env_logger = "0.11"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
wal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
http = "0.2"
parking_lot = { workspace = true }
strum = { workspace = true }
tap = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
dashmap = { workspace = true }

# Consensus related
atomicwrites = { workspace = true }
raft = { version = "0.7.0", features = ["prost-codec"], default-features = false }
prost-for-raft = { workspace = true }
protobuf = "2.28.0" # version of protobuf used by raft
serde_cbor = { workspace = true }

common = { path = "../common/common" }
cancel = { path = "../common/cancel" }
io = { path = "../common/io" }
issues = { path = "../common/issues" }
memory = { path = "../common/memory" }
segment = { path = "../segment" }
collection = { path = "../collection" }
api = { path = "../api" }
futures = { workspace = true }
anyhow = "1.0.93"
uuid = { workspace = true }
url = "2.5.4"
reqwest = { workspace = true }
tempfile = { workspace = true }
async-trait = "0.1.83"

tracing = { workspace = true, optional = true }
