[package]
name = "storage"
version = "0.2.0"
authors = [
    "Andrey Vasnetsov <vasnetsov93@gmail.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2024"

[lints]
workspace = true

[features]
tracing = ["dep:tracing", "api/tracing", "collection/tracing", "segment/tracing"]

[dev-dependencies]
proptest = { workspace = true }
env_logger = "0.11"

[dependencies]
ahash = { workspace = true }
fs-err = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
wal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
http = "0.2.12" # version of http used by tonic 0.11.x
parking_lot = { workspace = true }
strum = { workspace = true }
tap = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
dashmap = { workspace = true }
semver = { workspace = true }

# Consensus related
atomicwrites = { workspace = true }
raft = { workspace = true }
prost-for-raft = { workspace = true }
protobuf = "2.28.0" # version of protobuf used by raft
serde_cbor = { workspace = true }

common = { path = "../common/common" }
cancel = { path = "../common/cancel" }
io = { path = "../common/io" }
issues = { path = "../common/issues" }
memory = { path = "../common/memory" }
segment = { path = "../segment", default-features = false }
collection = { path = "../collection" }
shard = { path = "../shard" }
api = { path = "../api" }
futures = { workspace = true }
anyhow = "1.0.100"
uuid = { workspace = true }
url = "2.5.7"
reqwest = { workspace = true }
tempfile = { workspace = true }
async-trait = "0.1.89"

tracing = { workspace = true, optional = true }
