[package]
name = "trififo"
version = "0.0.0"
authors = ["Qdrant Team <info@qdrant.tech>"]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
parking_lot = { workspace = true }

# Compare against these caches
quick_cache = "0.6"
schnellru = "0.2"
foyer = "0.22"

# For memory measurement
cap = "0.1"

# For async runtime (needed by foyer)
tokio = { workspace = true }

[[bench]]
name = "cache_comparison"
harness = false
