[package]
name = "trififo"
version = "0.0.0"
authors = ["Qdrant Team <info@qdrant.tech>"]
license = "Apache-2.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
bench_all = []

[dependencies]
ahash = { workspace = true }

# when bumping hashbrown, make sure this condition hasn't changed, since it may compromise concurrent readers
# https://github.com/rust-lang/hashbrown/blob/9641fb3eea9a07933fb631da6e4f5070d2f7e1da/src/raw.rs#L2775
hashbrown = "0.16.1"
parking_lot = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
strum = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
static_assertions = { version = "1.1.0" }

# Compare against these caches
quick_cache = "0.6"
schnellru = "0.2"
foyer = "0.22"

# For ring buffer comparison test
ringbuf = "0.4"

# For memory measurement
cap = "0.1"

# For async runtime (needed by foyer)
tokio = { workspace = true }

[[bench]]
name = "cache_comparison"
harness = false
